--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -44,6 +44,10 @@
 	padding: 2px;
 	cursor: pointer;
 }
+.main-form .filter-title {
+	padding-left: 2px;
+	margin-top: 10px;
+}
 .main-form .task-list {
 	margin-top: 10px;
 }
